Добавлена иконка для отображения в трее

--- a/File_explorer/File_explorer.csproj
+++ b/File_explorer/File_explorer.csproj
@@ -112,5 +112,10 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\deviceTray.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
